test/files/neg/t12326.check
t12326.scala:5: warning: Unused import
import scala.collection.mutable._
                                ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
